--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   test-backend:
-  runs-on: ubuntu-latest
-  steps:
-    - name: test cout
-      run: echo "test test test"
+    runs-on: ubuntu-latest
+    steps:
+      - name: checout code
+      - uses: actions/checkout@v3
+      - run: echo "test test test"
