fix: added changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -403,7 +403,7 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
-
+.env
 # Visual Studio 6 build log
 *.plg
 
@@ -517,4 +517,3 @@ FodyWeavers.xsd
 *.db-wal
 
 .env
-
