--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,11 @@ on:
       - '**'
 
 jobs:
-  build:
+  frontend-build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: oops_trap
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -18,6 +20,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: oops_trap/package-lock.json
 
       - name: install dependencies
         run: npm ci
@@ -31,14 +34,16 @@ jobs:
       - name: upload build
         uses: actions/upload-artifact@v4
         with:
-          name: build
-          path: dist/
+          name: frontend-build
+          path: oops_trap/dist/
           retention-days: 1
       
-  test:
+  frontend-test:
     runs-on: ubuntu-latest
-    needs: build
-
+    needs: frontend-build
+    defaults:
+      run:
+        working-directory: oops_trap
     steps:
       - name: test checkout
         uses: actions/checkout@v4
@@ -48,6 +53,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: oops_trap/package-lock.json
 
       - name: install dependencies
         run: npm ci
@@ -62,22 +68,25 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: coverage/
+          path: oops_trap/coverage/
           retention-days: 1
 
-  e2e:
+  frontend-e2e:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - name: checkout 
         uses: actions/checkout@v4
-
+        defaults:
+          run:
+            working-directory: oops_trap
       - name: setup node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: npm
+          cache-dependency-path: oops_trap/package-lock.json
       
       - name: install dependencies
         run: npm ci
@@ -85,8 +94,8 @@ jobs:
       - name: download build 
         uses: actions/download-artifact@v4
         with:
-          name: build
-          path: dist
+          name: frontend-build
+          path: frontend/dist
     
       - name: install playwright
         run: npx playwright install --with-deps
