--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
 
   frontend-e2e:
     runs-on: ubuntu-latest
-    needs: build
+    needs: frontend-build
     defaults:
       run:
         working-directory: oops_trap
