--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+        with:
+          path: oops_trap
 
       - name: setup node.js 
         uses: actions/setup-node@v4
@@ -47,6 +49,8 @@ jobs:
     steps:
       - name: test checkout
         uses: actions/checkout@v4
+        with:
+          path: oops_trap
 
       - name: setup node.js 
         uses: actions/setup-node@v4
@@ -80,6 +84,8 @@ jobs:
     steps:
       - name: checkout 
         uses: actions/checkout@v4
+        with:
+          path: oops_trap
       - name: setup node.js
         uses: actions/setup-node@v4
         with:
