fix: changed ci properties

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: oops_trap
+        working-directory: oops_trap/oops_trap
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: ./oops_trap/package-lock.json
+          cache-dependency-path: oops_trap/oops_trap/package-lock.json
 
       - name: install dependencies
         run: npm ci
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
-          path: oops_trap/dist/
+          path: oops_trap/oops_trap/dist/
           retention-days: 1
       
   frontend-test:
@@ -46,19 +46,17 @@ jobs:
     needs: frontend-build
     defaults:
       run:
-        working-directory: oops_trap
+        working-directory: oops_trap/oops_trap
     steps:
       - name: test checkout
         uses: actions/checkout@v4
-        with:
-          path: oops_trap
 
       - name: setup node.js 
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: oops_trap/package-lock.json
+          cache-dependency-path: oops_trap/oops_trap/package-lock.json
 
       - name: install dependencies
         run: npm ci
@@ -73,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: oops_trap/coverage/
+          path: oops_trap/oops_trap/coverage/
           retention-days: 1
 
   frontend-e2e:
@@ -81,18 +79,17 @@ jobs:
     needs: frontend-build
     defaults:
       run:
-        working-directory: oops_trap
+        working-directory: oops_trap/oops_trap
     steps:
       - name: checkout 
         uses: actions/checkout@v4
-        with:
-          path: oops_trap
+
       - name: setup node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: npm
-          cache-dependency-path: oops_trap/package-lock.json
+          cache-dependency-path: oops_trap/oops_trap/package-lock.json
       
       - name: install dependencies
         run: npm ci
@@ -101,15 +98,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: frontend-build
-          path: frontend/dist
+          path: oops_trap/oops_trap/dist
     
       - name: install playwright
         run: npx playwright install --with-deps
 
       - name: Run e2e tests
         run: npm run test:e2e
-
-
-        
-      
-
