--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./oops_trap/oops_trap
+        working-directory: oops_trap/oops_trap
     steps:
       - name: checkout
         uses: actions/checkout@v4
 
       - name: some logs
-        run: pwd
+        run: pwd && ls -la
 
       - name: setup node.js 
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: ./oops_trap/oops_trap/package-lock.json
+          cache-dependency-path: oops_trap/oops_trap/package-lock.json
 
       - name: install dependencies
         run: npm ci
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
-          path: ./oops_trap/oops_trap/dist/
+          path: oops_trap/oops_trap/dist/
           retention-days: 1
       
   frontend-test:
@@ -46,7 +46,7 @@ jobs:
     needs: frontend-build
     defaults:
       run:
-        working-directory: ./oops_trap/oops_trap
+        working-directory: oops_trap/oops_trap
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -56,7 +56,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: ./oops_trap/oops_trap/package-lock.json
+          cache-dependency-path: oops_trap/oops_trap/package-lock.json
 
       - name: install dependencies
         run: npm ci
@@ -71,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: ./oops_trap/oops_trap/coverage/
+          path: oops_trap/oops_trap/coverage/
           retention-days: 1
 
   frontend-e2e:
@@ -79,7 +79,7 @@ jobs:
     needs: frontend-build
     defaults:
       run:
-        working-directory: ./oops_trap/oops_trap
+        working-directory: oops_trap/oops_trap
     steps:
       - name: checkout 
         uses: actions/checkout@v4
@@ -89,7 +89,7 @@ jobs:
         with:
           node-version: '18'
           cache: npm
-          cache-dependency-path: ./oops_trap/oops_trap/package-lock.json
+          cache-dependency-path: oops_trap/oops_trap/package-lock.json
       
       - name: install dependencies
         run: npm ci
@@ -98,7 +98,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: frontend-build
-          path: ./oops_trap/oops_trap/dist
+          path: oops_trap/oops_trap/dist
     
       - name: install playwright
         run: npx playwright install --with-deps
