--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: oops_trap
+        working-directory: ./oops_trap/oops_trap
     steps:
       - name: checkout
         uses: actions/checkout@v4
