fix: another ci fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   frontend-build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./oops_trap
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -23,22 +20,25 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: ./oops_trap/package-lock.json
+          cache-dependency-path: ./oops_trap/oops_trap/package-lock.json
 
       - name: install dependencies
+        working-directory: ./oops_trap/oops_trap
         run: npm ci
 
       - name: run eslint
+        working-directory: ./oops_trap/oops_trap
         run: npm run lint
       
       - name: build project
+        working-directory: ./oops_trap/oops_trap
         run: npm run build
 
       - name: upload build
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
-          path: oops_trap/dist/
+          path: oops_trap/oops_trap/dist/
           retention-days: 1
       
   frontend-test:
