--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: ./oops_trap/oops_trap/package-lock.json
+          cache-dependency-path: ./package-lock.json
 
       - name: install dependencies
         working-directory: ./oops_trap/oops_trap
