fix: another ci fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: setup node.js 
         uses: actions/setup-node@v4
+        working-directory: ./oops_trap/oops_trap
         with:
           node-version: '18'
           cache: 'npm'
