--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,6 @@ jobs:
         working-directory: ./oops_trap
         run: npm run lint
 
-      - name: show project tree
-        run: ls -R ./oops_trap
-      
       - name: build project
         working-directory: ./oops_trap
         run: npm run build
@@ -53,28 +50,36 @@ jobs:
       run:
         working-directory: oops_trap
     steps:
+
       - name: test checkout
         uses: actions/checkout@v4
-        with:
-          path: oops_trap
+
+      - name: some logs
+        run: |
+          pwd
+          ls -la
 
       - name: setup node.js 
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
-          cache-dependency-path: oops_trap/package-lock.json
+          cache-dependency-path: ./oops_trap/package-lock.json
 
       - name: install dependencies
+        working-directory: ./oops_trap
         run: npm ci
 
       - name: run unit tests
+        working-directory: ./oops_trap
         run: npm run test:unit
 
       - name: run tests with coverage
+        working-directory: ./oops_trap
         run: npm run test:coverage
 
       - name: upload coverage report
+        working-directory: ./oops_trap
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
