--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,11 +79,10 @@ jobs:
         run: npm run test:coverage
 
       - name: upload coverage report
-        working-directory: ./oops_trap
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: oops_trap/coverage/
+          path: ./oops_trap/coverage/
           retention-days: 1
 
   frontend-e2e:
