--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: ./oops_trap/coverage/
+          path: oops_trap/coverage/
           retention-days: 1
 
   frontend-e2e:
@@ -94,16 +94,21 @@ jobs:
     steps:
       - name: checkout 
         uses: actions/checkout@v4
-        with:
-          path: oops_trap
+
+      - name: some logs
+        run: |
+          pwd
+          ls -la
+          
       - name: setup node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: npm
-          cache-dependency-path: oops_trap/package-lock.json
+          cache-dependency-path: ./oops_trap/package-lock.json
       
       - name: install dependencies
+        working-directory: ./oops_trap
         run: npm ci
 
       - name: download build 
@@ -113,9 +118,11 @@ jobs:
           path: frontend/dist
     
       - name: install playwright
+        working-directory: ./oops_trap
         run: npx playwright install --with-deps
 
       - name: Run e2e tests
+        working-directory: ./oops_trap
         run: npm run test:e2e
 
 
