fix: change npm version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: oops_trap/coverage/
+          path: oops_trap/test-results-unit/coverage
           retention-days: 1
 
   frontend-e2e:
@@ -99,7 +99,7 @@ jobs:
         run: |
           pwd
           ls -la
-          
+
       - name: setup node.js
         uses: actions/setup-node@v4
         with:
