--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,32 +5,34 @@ services:
       - ./src/main/resources/changelog:/liquibase/changelog
     working_dir: /liquibase
     command: [
-      "--changelog-file=changelog/master.xml",  # ✅ Правильный путь
-      "--url=jdbc:postgresql://postgres:5432/mydatabase",
-      "--username=postgres", 
-      "--password=password",
+      "--changeLogFile=changelog/master.xml", 
+      "--url=${LIQUIBASE_COMMAND_URL}",
+      "--username=${LIQUIBASE_COMMAND_USERNAME}", 
+      "--password=${LIQUIBASE_COMMAND_PASSWORD}",
       "update"
     ]
     depends_on:
       postgres:
         condition: service_healthy
     profiles: ["migration"]
+    env_file: .env
 
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
+    env_file: .env
 
 volumes:
   postgres_data:
