--- a/oops_trap/package.json
+++ b/oops_trap/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview --config config/vite.config.js",
     "lint": "eslint . --ext .js,.vue --config config/eslint.config.cjs --max-warnings 0",
     "lint:fix": "eslint . --ext .js,.vue --config config/eslint.config.cjs --fix",
+    "format": "prettier --write . --config config/prettier.config.cjs",
+    "format:check": "prettier --check . --config config/prettier.config.cjs",
+    "lint:format": "npm run format && npm run lint:fix",
     "test:unit": "vitest --config config/vitest.config.js tests/unit",
     "test:unit:run": "vitest run --config config/vitest.config.js tests/unit",
     "test:e2e": "playwright test --config config/playwright.config.js tests/e2e",
@@ -29,10 +32,12 @@
     "@vitest/coverage-v8": "^1.0.0",
     "@vkontakte/vk-miniapps-deploy": "^0.1.6",
     "@vkontakte/vk-tunnel": "^0.2.4",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.4.0",
     "eslint": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^22.0.0",
+    "prettier": "^2.8.8",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
   }
