--- a/oops_trap/package.json
+++ b/oops_trap/package.json
@@ -21,7 +21,9 @@
     "tunnel": "vk-tunnel"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@vkontakte/vk-bridge": "^2.13.0",
+    "ant-design-vue": "^4.2.6",
     "pinia": "^2.1.0",
     "vue": "^3.5.22",
     "vue-router": "^4.2.0"
@@ -30,7 +32,7 @@
     "@playwright/test": "^1.40.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^1.0.0",
-    "@vkontakte/vk-miniapps-deploy": "^0.1.6",
+    "@vkontakte/vk-miniapps-deploy": "^0.1.9",
     "@vkontakte/vk-tunnel": "^0.2.4",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.4.0",
