--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "express": "^4.18.2",
+    "prisma": "^6.19.0",
     "ws": "^8.15.0"
   },
   "devDependencies": {
