--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "express": "^4.18.2",
-    "prisma": "^6.19.0",
     "ws": "^8.15.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prisma": "^6.19.0"
   }
 }
