--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,13 @@ services:
     env_file: .env
     environment:
       - NODE_ENV=development
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
     depends_on:
       - postgres
     volumes:
       - ./backend:/app
       - /app/node_modules
+    command: sh -c "npx prisma generate && npm run dev"
 
   liquibase:
     build:
