fix: added prisma command to Dockerfile and little fixes

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,14 +3,14 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;  # <- важно!
+    include       /etc/nginx/mime.types; 
     default_type  application/octet-stream;
 
     server {
         listen 80;
 
         location /api/ {
-            proxy_pass http://backend:8080/;
+            proxy_pass http://backend:8080;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
