--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -7,6 +7,8 @@ RUN npm ci
 
 COPY . .
 
+RUN DATABASE_URL="postgresql://postgres:postgres@localhost:5432/oppsdb?schema=public" npx prisma generate
+
 EXPOSE 8080
 
 CMD ["npm", "run", "start"]
