--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,13 +22,14 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     container_name: backend
     expose:
       - "8080"
     env_file: .env
     environment:
       - NODE_ENV=production
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
     depends_on:
       - postgres
 
