--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.0",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.15.0"
   },
   "devDependencies": {
