--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,15 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        location /ws/game {
+            proxy_pass http://backend:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         location / {
             root /usr/share/nginx/html;
             index index.html;
