--- a/oops_trap/package.json
+++ b/oops_trap/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "@sentry/vue": "^10.25.0",
     "@sentry/tracing": "^7.44.0",
+    "@sentry/vue": "^10.25.0",
     "@vkontakte/vk-bridge": "^2.13.0",
     "ant-design-vue": "^4.2.6",
     "pinia": "^2.1.0",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "@sentry/vite-plugin": "^4.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^1.0.0",
     "@vkontakte/vk-miniapps-deploy": "^0.1.9",
@@ -40,6 +41,7 @@
     "@vue/test-utils": "^2.4.0",
     "eslint": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
+    "happy-dom": "^20.0.10",
     "jsdom": "^22.0.0",
     "prettier": "^2.8.8",
     "vite": "^5.0.0",
