--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,9 @@ jobs:
     
       - name: install playwright
         working-directory: ./oops_trap
-        run: npx playwright install install-deps webkit
+        run: |
+          npx playwright install webkit
+          npx playwright install-deps webkit
 
       - name: Run e2e tests
         working-directory: ./oops_trap
