--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
         working-directory: ./oops_trap
         run: npm run lint
 
+      - name: run format
+        working-directory: ./oops_trap
+        run: npm run format:check
+
       - name: build project
         working-directory: ./oops_trap
         run: npm run build
