feat: fixed linter config

--- a/oops_trap/package.json
+++ b/oops_trap/package.json
@@ -37,9 +37,9 @@
     "@vitest/coverage-v8": "^1.0.0",
     "@vkontakte/vk-miniapps-deploy": "^0.1.9",
     "@vkontakte/vk-tunnel": "^0.2.4",
-    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.4.0",
     "eslint": "^8.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^9.0.0",
     "happy-dom": "^20.0.10",
     "jsdom": "^22.0.0",
