refactor: temporary removed linter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
         working-directory: ./oops_trap
         run: npm ci
 
-      - name: run eslint
-        working-directory: ./oops_trap
-        run: npm run lint
+      # - name: run eslint
+      #   working-directory: ./oops_trap
+      #   run: npm run lint
 
       - name: build project
         working-directory: ./oops_trap
