--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,13 +70,13 @@ jobs:
         working-directory: ./oops_trap
         run: npm ci
 
-      # - name: run unit tests
-      #   working-directory: ./oops_trap
-      #   run: npm run test:unit
+      - name: run unit tests
+        working-directory: ./oops_trap
+        run: npm run test:unit
 
-      # - name: run tests with coverage
-      #   working-directory: ./oops_trap
-      #   run: npm run test:coverage
+      #- name: run tests with coverage
+      #  working-directory: ./oops_trap
+      #  run: npm run test:coverage
 
       - name: upload coverage report
         uses: actions/upload-artifact@v4
