--- a/oops_trap/package.json
+++ b/oops_trap/package.json
@@ -29,7 +29,8 @@
     "matter-js": "^0.20.0",
     "pinia": "^2.1.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "yandex-metrika-vue3": "^1.3.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
